<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewMainTitle"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonMainInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainInput" />

        <Button
            android:id="@+id/buttonMainInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMainInfo" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>